Fixed spacing and positioning issues of squares

--- a/client/styles.css
+++ b/client/styles.css
@@ -1,11 +1,16 @@
 .square {
-  height: 30px;
-  width: 30px;
+  height: 40px;
+  width: 40px;
   display: inline-block;
   border: 1px solid;
   text-align: center;
 }
 
+.row {
+  margin: -4px
+}
+
 .mine {
+  position: absolute;
   display: none;
 }
